[package]
name = "sps_cebra_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.36", features = ["lazy", "parquet", "ndarray"] }
ndarray = "0.15"
ndarray-stats = "0.5.1"
ndhistogram = "0.9.0"
egui = "0.24.1"
eframe = "0.24.1"
egui_plot = "0.24.2"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
rfd = "0.11"
egui_extras = { version = "*", features = ["all_loaders"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
