[package]
name = "sps_cebra_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.37", features = ["lazy", "parquet", "ndarray"] }
egui = "0.26.0"
eframe = "0.26.0"
egui_plot = "0.26.0"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
rfd = "0.13"
egui_extras = { version = "*", features = ["all_loaders"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.30"
serde_json = "1.0"
geo = "0.27.0"
fnv = "1.0.7"